fix: refactoring style for toolbbar overflow to remove hardcoded style from ngx lib

--- a/src/toolbar.scss
+++ b/src/toolbar.scss
@@ -3,7 +3,6 @@
 
 $block: #{$fd-namespace}-toolbar;
 $toolbar-height-compact: 2rem;
-$info-toolbar-height: 2rem;
 $toolbar-height-cozy: 2.75rem;
 
 $toolbar-separator-height-compact: 1.5rem;
@@ -21,7 +20,7 @@ $title-toolbar-height: 2.75rem;
 }
 
 @mixin toolbarAuto() {
-  background-color: var(--fdToolbar_Auto_Background);
+  background-color: inherit;
 }
 
 @mixin toolbarSolid() {
@@ -33,8 +32,7 @@ $title-toolbar-height: 2.75rem;
 }
 
 @mixin toolbarInfo() {
-  height: $info-toolbar-height;
-  $active-color: var(--sapInfobar_TextColor);
+  $active-color: var(--sapInfobar__TextColor);
 
   background-color: var(--sapInfobar_NonInteractive_Background);
   color: var(--sapList_TextColor);
@@ -90,10 +88,13 @@ $title-toolbar-height: 2.75rem;
   @include fd-reset();
 
   height: $toolbar-height-compact;
-  min-height: $toolbar-height-compact;
   padding: $toolbar-padding;
   display: flex;
   align-items: center;
+
+  > * {
+    flex-shrink: 0;
+  }
 
   @include toolbarSpacing();
   @include toolbarStandard();
@@ -116,6 +117,18 @@ $title-toolbar-height: 2.75rem;
 
   &--transparent {
     @include toolbarTransparent();
+  }
+
+  &--fade-in {
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0s linear 0s, opacity 1s;
+  }
+
+  &--fade-out {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s linear 1s, opacity 1ms;
   }
 
   &--info {
@@ -142,68 +155,63 @@ $title-toolbar-height: 2.75rem;
     background-color: var(--sapToolbar_SeparatorColor);
   }
 
-  &__overflow {
-    &.#{$fd-namespace}-popover {
-      .#{$block}__overflow__body {
-        @include fd-reset();
+  &__body {
+    &--overflow {
+      @include fd-reset();
+      @include fd-flex(column);
 
-        display: flex;
-        flex-direction: column;
-        max-width: 20rem;
-        padding: 0.1875rem 0.375rem;
+      max-width: 20rem;
+      padding: 0.1875rem 0.375rem;
+      max-height: 50vh;
+      overflow: auto;
 
-        > * {
-          display: block;
-          text-align: left;
-          width: auto;
-          margin: 0.1875rem 0;
+      & .#{$block}__button {
+        display: block;
+        text-align: left;
+        width: auto;
+        margin: 0.1875rem 0;
 
-          @include fd-rtl() {
-            text-align: right;
+        @include fd-rtl() {
+          text-align: right;
+        }
+
+        &--menu {
+          @include fd-flex-center() {
+            justify-content: space-between;
           }
-        }
-
-        > .#{$block}__separator {
-          height: 0.0625rem;
-          margin: 0.1875rem;
-          width: auto;
-          background-color: var(--sapToolbar_SeparatorColor);
-        }
-
-        .#{$block}__overflow__form-label {
-          &.#{$fd-namespace}-form-label {
-            margin-top: 0.4375rem;
-          }
-        }
-
-        .#{$block}__overflow__form-label,
-        .#{$block}__overflow__label {
-          overflow: hidden;
-          white-space: nowrap;
-          text-overflow: ellipsis;
+          
+          max-width: 100%;
         }
       }
+
+      & .#{$block}__separator {
+        @include fd-reset();
+
+        height: 0.0625rem;
+        margin: 0.1875rem;
+        width: auto;
+        background-color: var(--sapToolbar_SeparatorColor);
+      }
+
+      .#{$block}__body--overflow-label {
+        @include fd-reset();
+        @include fd-ellipsis();
+
+        margin-top: 0.4375rem;
+      }
+    }
+  }
+
+  .#{$block}__body {
+    margin-left: auto;
+
+    @include fd-rtl() {
+      margin-left: 0;
+      margin-right: auto;
     }
   }
 
   &--cozy {
     height: $toolbar-height-cozy;
-    min-height: $toolbar-height-cozy;
-
-    &.#{$block}--info {
-      height: $info-toolbar-height;
-    }
-
-    .#{$block}__separator {
-      height: $toolbar-separator-height-cozy;
-    }
-
-    .#{$block}__overflow {
-      &.#{$fd-namespace}-popover {
-        .#{$block}__overflow__body {
-          padding: 0.25rem 0.5rem;
-        }
-      }
-    }
   }
 }
